src/test/deca/syntax/invalid/renduInter01/01missing_if.deca
// Description:
//      test de programme incorrect lexicalement (il manque une branche if dans la boucle if_else)
//
// Resultats:
//      Erreur syntaxique
//      Ligne 10 : token else inattendu

{
    int x = 4;
    else (x == 4) {
        println("hello else_if2 : ", x);
    }

}
